turning in day12

--- a/day12_reading_journal.ipynb
+++ b/day12_reading_journal.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "solution": "Exercise 18.3"
@@ -48,23 +48,23 @@
      "output_type": "stream",
      "text": [
       "<class '__main__.Deck'>\n",
-      "Ace of Diamonds\n",
-      "2 of Diamonds\n",
-      "Ace of Hearts\n",
+      "8 of Hearts\n",
+      "3 of Spades\n",
+      "4 of Spades\n",
+      "6 of Spades\n",
+      "8 of Spades\n",
+      "[<__main__.PokerHand object at 0x7f9e640a1b38>, <__main__.PokerHand object at 0x7f9e640a1cc0>, <__main__.PokerHand object at 0x7f9e640a1978>, <__main__.PokerHand object at 0x7f9e640a17f0>, <__main__.PokerHand object at 0x7f9e640a1d30>]\n",
+      "\n",
       "Jack of Hearts\n",
       "9 of Spades\n",
-      "[<__main__.Hand object at 0x7f75a8945d30>, <__main__.Hand object at 0x7f75a8945fd0>, <__main__.Hand object at 0x7f75a8945f28>, <__main__.Hand object at 0x7f75a8945b70>, <__main__.Hand object at 0x7f75a8945a20>]\n",
-      "\n",
-      "7 of Hearts\n",
-      "7 of Diamonds\n",
-      "10 of Hearts\n",
-      "4 of Spades\n",
-      "7 of Spades\n",
-      "3 of Diamonds\n",
+      "8 of Clubs\n",
+      "9 of Diamonds\n",
+      "4 of Hearts\n",
+      "10 of Diamonds\n",
       "8 of Diamonds\n",
-      "9 of Clubs\n",
-      "9 of Hearts\n",
-      "8 of Spades\n"
+      "5 of Spades\n",
+      "4 of Clubs\n",
+      "7 of Clubs\n"
      ]
     }
    ],
@@ -121,6 +121,12 @@
     "        t1 = self.suit, self.rank\n",
     "        t2 = other.suit, other.rank\n",
     "        return t1 < t2\n",
+    "    \n",
+    "    def is_before(self, card):\n",
+    "        '''returns true if card is one higher than self in rank'''\n",
+    "        if self.rank + 1 == card.rank:\n",
+    "            return True\n",
+    "        return False\n",
     "\n",
     "\n",
     "class Deck:\n",
@@ -191,7 +197,7 @@
     "        \"\"\"\n",
     "        hands = []\n",
     "        for n in range(n_hands):\n",
-    "            hand = Hand(self)\n",
+    "            hand = PokerHand(self)\n",
     "            self.move_cards(hand, n)\n",
     "            hands.append(hand)\n",
     "        return hands\n",
@@ -272,12 +278,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "solution": "Exercise 18.6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3500\n",
+      "{'flush': 0.14285714285714285, 'full house': 0.05714285714285715, 'pair': 19.485714285714288, 'no hand': 76.05714285714285, 'three': 1.1142857142857143, 'two pair': 2.742857142857143, 'straight': 0.4}\n"
+     ]
+    }
+   ],
    "source": [
     "class PokerHand(Hand):\n",
     "    \"\"\"Represents a poker hand.\"\"\"\n",
@@ -292,7 +307,13 @@
     "            self.suits[card.suit] = self.suits.get(card.suit, 0) + 1\n",
     "            \n",
     "    def rank_hist(self):\n",
-    "        \"\"\"Build a histogram of suits that appear in the hand\"\"\"\n",
+    "        \"\"\"Build a histogram of suits that appear in the hand\n",
+    "        \n",
+    "        Stores result under rand\n",
+    "        \"\"\"\n",
+    "        self.ranks = {}\n",
+    "        for card in self.cards:\n",
+    "            self.ranks[card.rank] = self.ranks.get(card.rank, 0) + 1\n",
     "\n",
     "    def has_flush(self):\n",
     "        \"\"\"Returns True if the hand has a flush, False otherwise.\n",
@@ -306,8 +327,123 @@
     "        return False\n",
     "    \n",
     "    def has_pair(self):\n",
-    "        \"\"\"Returns True if hand has a pair, Fale otherwise.\"\"\"\n",
+    "        \"\"\"Returns True if hand has a pair, False otherwise.\n",
+    "        returns False there is more than two of a kind\n",
+    "        \"\"\"\n",
+    "        self.rank_hist()\n",
+    "        for val in self.ranks.values():\n",
+    "            if val >= 2:\n",
+    "                return True\n",
+    "        return False\n",
+    "    \n",
+    "    def has_two_pair(self):\n",
+    "        \"\"\"Return True if hand has two pair, False\"\"\"\n",
+    "        if self.has_pair():\n",
+    "            pair_count = 0\n",
+    "            for val in self.ranks.values():\n",
+    "                if val >=2:\n",
+    "                    pair_count += 1\n",
+    "            if pair_count >= 2:\n",
+    "                return True\n",
+    "        return False\n",
+    "    \n",
+    "    def has_three(self):\n",
+    "        \"\"\"Returns True if hand has three of a kind\"\"\"\n",
+    "        if self.has_pair:\n",
+    "            for val in self.ranks.values():\n",
+    "                if val == 3:\n",
+    "                    return True\n",
+    "        return False\n",
+    "    \n",
+    "    def has_run(self):\n",
+    "        self.sort\n",
+    "        self.rank_hist()\n",
+    "        run = []\n",
+    "        run_length= 1\n",
+    "        run_lengths = []\n",
+    "        for key in self.ranks.keys():\n",
+    "            if key not in run:\n",
+    "                if key + 1 in self.ranks.keys():\n",
+    "                    run.append(key)\n",
+    "                    run.append(key + 1)\n",
+    "            else:\n",
+    "                if key + 1 in self.ranks.keys():\n",
+    "                    run.append(key + 1)\n",
+    "        if len(run) >= 5:\n",
+    "            for i in range(len(run)-1):\n",
+    "                if run[i] + 1 == run[i + 1]:\n",
+    "                    run_length += 1\n",
+    "                else:\n",
+    "                    run_lengths.append(run_length)\n",
+    "                    run_length == 1\n",
+    "            run_lengths.append(run_length)\n",
+    "            for length in run_lengths:\n",
+    "                if length >= 5:\n",
+    "                    return True\n",
+    "        return False\n",
     "\n",
+    "\n",
+    "    \n",
+    "    def has_full_house(self):\n",
+    "        if self.has_pair() and self.has_three():\n",
+    "            for val in self.ranks.values():\n",
+    "                if val == 3:\n",
+    "                    for val_2 in self.ranks.values():\n",
+    "                        if val_2 == 2:\n",
+    "                            return True\n",
+    "        return False\n",
+    "    \n",
+    "    def has_four(self):\n",
+    "        if self.has_three():\n",
+    "            for val in self.ranks.values():\n",
+    "                if val == 4:\n",
+    "                    return True\n",
+    "        return False\n",
+    "    \n",
+    "    def has_straight_flush(self):\n",
+    "        if self.has_run() and self.has_flush():\n",
+    "            return True\n",
+    "        return False\n",
+    "    \n",
+    "    def classify(self):\n",
+    "        '''classifies hand by highest denomination'''\n",
+    "        if self.has_straight_flush():\n",
+    "            return 'straight flush'\n",
+    "        else:\n",
+    "            if self.has_flush():\n",
+    "                return 'flush'\n",
+    "            elif self.has_run():\n",
+    "                return 'straight'\n",
+    "            else:\n",
+    "                if self.has_pair():\n",
+    "                    if self.has_three():\n",
+    "                        if self.has_four():\n",
+    "                            return 'four'\n",
+    "                        elif self.has_full_house():\n",
+    "                            return 'full house'\n",
+    "                        else:\n",
+    "                            return 'three'\n",
+    "                    elif self.has_two_pair():\n",
+    "                        return 'two pair'\n",
+    "                    else:\n",
+    "                        return 'pair'\n",
+    "                else:\n",
+    "                    return 'no hand'\n",
+    "\n",
+    "            \n",
+    "def analyze_deck(trials):\n",
+    "    classif = dict()\n",
+    "    for i in range(trials):\n",
+    "        deck = Deck()\n",
+    "        deck.shuffle()\n",
+    "        hands = deck.deal_hands(52//7, 7)\n",
+    "        for hand in hands:\n",
+    "            classif[hand.classify()] = classif.get(hand.classify(), 0) + 1\n",
+    "    count = sum([classif[i] for i in classif.keys()])\n",
+    "    print(count)\n",
+    "    for key in classif.keys():\n",
+    "        classif[key] = ((classif[key]/count)*100)\n",
+    "    return classif\n",
     "        \n",
     "\n",
     "if __name__ == '__main__':\n",
@@ -316,13 +452,21 @@
     "    deck.shuffle()\n",
     "\n",
     "    # deal the cards and classify the hands\n",
-    "    for i in range(7):\n",
-    "        hand = PokerHand()\n",
-    "        deck.move_cards(hand, 7)\n",
-    "        hand.sort()\n",
-    "        print(hand)\n",
-    "        print(hand.has_flush())\n",
-    "        print('')\n"
+    "#     for i in range(7):\n",
+    "#         hand = PokerHand()\n",
+    "#         deck.move_cards(hand, 7)\n",
+    "#         hand.sort()\n",
+    "#         print(hand)\n",
+    "#         #print(hand.has_flush())\n",
+    "#         #print(hand.has_pair())\n",
+    "#         #print(hand.has_two_pair())\n",
+    "#         #print(hand.has_three())\n",
+    "# #         print(hand.has_run())\n",
+    "# #         print(hand.has_full_house())\n",
+    "# #         print(hand.has_four())\n",
+    "#         print(hand.classify())\n",
+    "#         print(' ')\n",
+    "    print(analyze_deck(500))\n"
    ]
   },
   {
