--- a/day15_reading_journal.ipynb
+++ b/day15_reading_journal.ipynb
@@ -48,12 +48,12 @@
     "solution": "Exercise B.1"
    },
    "source": [
-    "  1. \n",
-    "  2. \n",
-    "  3. \n",
-    "  4. \n",
-    "  5. \n",
-    "  6. "
+    "  1. $O (n^3)$\n",
+    "  2. $O (n^3)$\n",
+    "  3. $af + b$ is in $O (g)$\n",
+    "  4. $O(g)$\n",
+    "  5. if $g > h$, $f_1 + f_2$ is in $O(g)$, otherwise $O(h)$\n",
+    "  6. $f_1*f_2$ is in $O(g*h)$ time"
    ]
   },
   {
@@ -95,21 +95,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
